# societatis

./: .appveyor.yml  .clang-format  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  SECURITY.md
lib/: CMakeLists.txt
lib/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerData.h  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h  IBlockchainExplorer.h  IBlockchainObserver.h
lib/Breakpad/: Breakpad.cpp  Breakpad.h
lib/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  BlockingQueue.h  CommandLine.cpp  CommandLine.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  DnsTools.cpp  DnsTools.h  FileMappedVector.h  HardwareInfo.cpp  HardwareInfo.h  IInputStream.h  IOutputStream.h  JsonValue.cpp  JsonValue.h  Lazy.h  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  StdOutputStream.h  StreamTools.cpp  StreamTools.h  StringBuffer.h  StringInputStream.cpp  (+18 more)
lib/CryptoNoteCore/: Account.cpp  Account.h  BlockIndex.cpp  BlockIndex.h  Blockchain.cpp  Blockchain.h  BlockchainIndices.cpp  BlockchainIndices.h  BlockchainMessages.cpp  BlockchainMessages.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreConfig.cpp  CoreConfig.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  CryptoNoteStatInfo.h  CryptoNoteTools.cpp  CryptoNoteTools.h  Currency.cpp  Currency.h  Difficulty.cpp  Difficulty.h  IBlock.h  IBlockchainStorageObserver.h  ICore.h  ICoreObserver.h  IMinerHandler.h  ITimeProvider.h  ITransaction.h  ITransactionValidator.h  ITxPoolObserver.h  (+21 more)
lib/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  CryptoNoteProtocolHandlerCommon.h  ICryptoNoteProtocolObserver.h  ICryptoNoteProtocolQuery.h
lib/Global/: Checkpoints.h  Constants.h  CryptoNoteConfig.h  version.h.in
lib/Http/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
lib/InProcessNode/: InProcessNode.cpp  InProcessNode.h  InProcessNodeErrors.cpp  InProcessNodeErrors.h
lib/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
lib/Logging/: CommonLogger.cpp  CommonLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h  LoggerGroup.cpp  LoggerGroup.h  LoggerManager.cpp  LoggerManager.h  LoggerMessage.cpp  LoggerMessage.h  LoggerRef.cpp  LoggerRef.h  StreamLogger.cpp  StreamLogger.h
lib/Mnemonics/: dutch.h  electrum-words.cpp  electrum-words.h  english.h  french.h  german.h  italian.h  language_base.h  polish.h  russian.h  singleton.h  ukrainian.h
lib/NodeRpcProxy/: NodeErrors.cpp  NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
lib/P2p/: ConnectionContext.h  IP2pNodeInternal.h  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  NetNodeCommon.h  NetNodeConfig.cpp  NetNodeConfig.h  P2pConnectionProxy.cpp  P2pConnectionProxy.h  P2pContext.cpp  P2pContext.h  P2pContextOwner.cpp  P2pContextOwner.h  P2pInterfaces.h  P2pNetworks.h  P2pNode.cpp  P2pNode.h  P2pNodeConfig.cpp  P2pNodeConfig.h  P2pProtocolDefinitions.h  P2pProtocolTypes.h  PeerListManager.cpp  PeerListManager.h
lib/PaymentGate/: NodeFactory.cpp  NodeFactory.h  PaymentServiceJsonRpcMessages.cpp  PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  WalletService.cpp  WalletService.h  WalletServiceErrorCategory.cpp  WalletServiceErrorCategory.h
lib/Rpc/: CoreRpcServerCommandsDefinitions.h  CoreRpcServerErrorCodes.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  JsonRpc.cpp  JsonRpc.h  RpcServer.cpp  RpcServer.h  RpcServerConfig.cpp  RpcServerConfig.h
lib/Serialization/: BinaryInputStreamSerializer.cpp  BinaryInputStreamSerializer.h  BinaryOutputStreamSerializer.cpp  BinaryOutputStreamSerializer.h  BinarySerializationTools.h  BlockchainExplorerDataSerialization.cpp  BlockchainExplorerDataSerialization.h  ISerializer.h  IStream.h  JsonInputStreamSerializer.cpp  JsonInputStreamSerializer.h  JsonInputValueSerializer.cpp  JsonInputValueSerializer.h  JsonOutputStreamSerializer.cpp  JsonOutputStreamSerializer.h  KVBinaryCommon.h  KVBinaryInputStreamSerializer.cpp  KVBinaryInputStreamSerializer.h  KVBinaryOutputStreamSerializer.cpp  KVBinaryOutputStreamSerializer.h  MemoryStream.h  SerializationOverloads.cpp  SerializationOverloads.h  SerializationTools.h
lib/System/: Context.h  ContextGroup.cpp  ContextGroup.h  ContextGroupTimeout.cpp  ContextGroupTimeout.h  Event.cpp  Event.h  EventLock.cpp  EventLock.h  InterruptedException.h  Ipv4Address.cpp  Ipv4Address.h  OperationTimeout.h  RemoteContext.h  RemoteEventLock.cpp  RemoteEventLock.h  TcpStream.cpp  TcpStream.h
lib/Transfers/: BlockchainSynchronizer.cpp  BlockchainSynchronizer.h  CommonTypes.h  IBlockchainSynchronizer.h  IObservableImpl.h  SynchronizationState.cpp  SynchronizationState.h  TransfersConsumer.cpp  TransfersConsumer.h  TransfersContainer.cpp  TransfersContainer.h  TransfersSubscription.cpp  TransfersSubscription.h  TransfersSynchronizer.cpp  TransfersSynchronizer.h  TypeHelpers.h
lib/Wallet/: IFusionManager.h  IWallet.h  LegacyKeysImporter.cpp  LegacyKeysImporter.h  WalletAsyncContextCounter.cpp  WalletAsyncContextCounter.h  WalletErrors.cpp  WalletErrors.h  WalletGreen.cpp  WalletGreen.h  WalletIndices.h  WalletRpcServer.cpp  WalletRpcServer.h  WalletRpcServerCommandsDefinitions.h  WalletRpcServerErrorCodes.h  WalletSerializationV1.cpp  WalletSerializationV1.h  WalletSerializationV2.cpp  WalletSerializationV2.h  WalletUtils.cpp  WalletUtils.h
lib/WalletLegacy/: IWalletLegacy.h  KeysStorage.cpp  (+19 more)
src/: CMakeLists.txt
tests/: CMakeLists.txt
(+273 files in other folders)
